<resources>
    <string name="app_name">AweConf</string>
    <string name="title_activity_main">AweConf</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="Conferences">Conferences</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="where">WHERE</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="when">WHEN</string>
    <string name="category">CATEGORY</string>
    <string name="website">WEBSITE</string>
    <string name="call_for_paper">Call for Paper: Open</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="newConf">New</string>
</resources>
