<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="conference.mobile.awesome.boostco.de.amc.activity.fragment.ConferenceDetail">


    <com.google.android.gms.maps.MapView
        android:id="@+id/conferenceDetailMap"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_weight="1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="240dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/conferenceDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/when"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/start_date"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/conferenceDetailStartDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="01/01/22"
                        android:textAlignment="viewEnd" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/conferenceDetailEndDateTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/end_date"
                        android:textAlignment="viewStart"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/conferenceDetailEndDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="01/02/33"
                        android:textAlignment="viewEnd" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/where"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/conferenceDetailCityTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/City"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/conferenceDetailCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="City Name"
                        android:textAlignment="viewEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/conferenceDetailCountryTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Country"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/conferenceDetailCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Country Name"
                        android:textAlignment="viewEnd" />
                </LinearLayout>

                <TextView
                    android:id="@+id/conferenceDetailCategoryTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/topics"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/conferenceDetailCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="List of topics"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/website"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/conferenceDetailWebsite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:linksClickable="true" />

                </LinearLayout>

                <TextView
                    android:id="@+id/conferenceDetailCallForPaper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/call_for_paper"
                    android:textSize="12sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>
